# aether

./: BUILD_TROUBLESHOOTING.md  CHANGELOG.md  RELEASE.md  WINDOWS_BUILD.md  WINDOWS_INSTALL.md  auth_testing.md  design_guidelines.json
.emergent/: emergent.yml
.github/workflows/: aether-cli-release.yml  aether-desktop-release.yml  build-windows.yml  release-all.yml
aether-cli/: Cargo.toml  EXPLOITS_PORTING.md  NOTICE.md  README.md
aether-cli/src/: bridge.rs  heimdall.rs  main.rs  mtkclient.rs  usb.rs
aether-cli/src/exploits/: bootloader.rs  frp.rs  imei.rs  info.rs  mod.rs  samsung.rs
aether-desktop/: .gitignore  README.md  package.json
aether-desktop/public/: index.html
aether-desktop/src-tauri/: Cargo.toml  tauri.conf.json
aether-desktop/src-tauri/capabilities/: default.json
aether-desktop/src-tauri/icons/: README.md  icon.icns
aether-desktop/src-tauri/src/: lib.rs  main.rs
backend/: server.py
backend/tests/: test_auth_stripe.py
frontend/: eslint.config.mjs
frontend/src/: App.js  index.css
frontend/src/components/: ActionGrid.jsx  BuyCreditsModal.jsx  CloudExploitDB.jsx  Console.jsx  DemoModeBanner.jsx  DeviceInfoPanel.jsx  DeviceStatus.jsx  DownloadCliButton.jsx  DownloadDesktopButton.jsx  Footer.jsx  FoundingBuilderBanner.jsx  GetDesktopHeroCard.jsx  ProtectedRoute.jsx  Sidebar.jsx  StatusBar.jsx  UserProfile.jsx  WindowChrome.jsx
frontend/src/content/docs/: index.js
frontend/src/context/: AppContext.jsx  AuthContext.jsx
frontend/src/hooks/: useCliBridge.js
frontend/src/lib/: mockData.js  releases.js
frontend/src/pages/: AuthCallback.jsx  Dashboard.jsx  DocArticle.jsx  DocsHub.jsx  IPhoneService.jsx  Login.jsx  Logs.jsx  MTKService.jsx  PaymentCancel.jsx  PaymentSuccess.jsx  Pricing.jsx  Privacy.jsx  QualcommService.jsx  SamsungService.jsx  Settings.jsx  Signup.jsx  Terms.jsx
memory/: CHANGELOG.md  PRD.md  ROADMAP.md
scripts/: README.md  build-cli-windows.ps1  build-desktop-windows.ps1  release.sh
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json
test_reports/pytest/: pytest_results.xml
