[package]
name = "aether-cli"
version = "0.1.0"
edition = "2021"
authors = ["Aether Labs <hello@aether.dev>"]
license = "Proprietary"
description = "Aether Repair Tool — unified Rust CLI for MTK / Qualcomm / Apple / Samsung device repair."
repository = "https://github.com/aether-labs/aether-cli"
readme = "README.md"

[dependencies]
# Command-line parsing
clap = { version = "4.5", features = ["derive", "color"] }
# USB / serial access
rusb = "0.9"
serialport = "4.3"
# Logging + pretty terminal output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
colored = "2.1"
indicatif = "0.17"
# JSON / config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP for talking to the Aether web dashboard (license check, telemetry opt-in)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# Error handling
anyhow = "1"
thiserror = "1"
# Misc
hex = "0.4"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "aether-cli"
path = "src/main.rs"
